[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.dependencies]
bevy = { version = "0.16.0", default-features = false }
bevy_replicon = { version = "0.35", default-features = false }

bevy_rewind = { path = "crates/bevy_rewind" }

serde = "1.0"
arraydeque = "0.5"
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }

[package]
name = "bevy_rewind_examples"
edition = "2024"

[profile.dev]
opt-level = 1
lto = "off"
debug-assertions = true

[dev-dependencies]
bevy = { version = "0.16.0", features = ["wayland"] }
bevy_replicon = {version = "0.35", features = ["client", "server"]}
bevy_rewind.workspace = true
bevy_rewind_input.path = "crates/bevy_rewind_input"
bevy_rewind_entity_management.path = "crates/bevy_rewind_entity_management"
serde.workspace = true

# Only for examples
bevy_replicon_example_backend = "0.35"
avian3d = {version = "0.3", features = ["serialize"]}

[[example]]
name = "toy_cars"
path = "examples/toy_cars/main.rs"
